[package]
name = "gl_pipelines"
version = "0.2.8"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.12"
webbrowser = "0.8"

[dependencies.glow]
git = "https://github.com/madwareru/glow"

[dependencies.egui]
features = ["bytemuck"]
version = "0.19.0"

[dependencies.sdl2]
features = ["bundled", "static-link"]
version = "0.35"
